--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RecyclerView-Research</string>
+
+    <!-- Titles -->
+    <string name="title_research_topic_sample_list">Research Examples</string>
+    <string name="title_research_type_data_binding_assisted_recycler_view_example">Data Binding Based</string>
 </resources>
