--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">Click</string>
 
-    <!-- Titles -->
+    <!-- Screen Titles -->
     <string name="title_research_topic_sample_list">Research Examples</string>
     <string name="title_research_type_data_binding_assisted_recycler_view_example">Data Binding Based</string>
+
+    <!-- Menu Titles -->
+    <string name="title_menu_summary_of_research">Synopsis</string>
 </resources>
