[ADDED] Show code menu item for showing source code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <!-- Menu Titles -->
     <string name="title_menu_summary_of_research">Synopsis</string>
+    <string name="title_menu_view_source_code">Code</string>
 </resources>
